--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+  <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-4VBVQG5NYT"></script>
   <script>
@@ -36,6 +39,14 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <script type="text/javascript">
+    aclib.runInPagePush({
+      zoneId: '10197754',
+      maxAds: 2,
+    });
+  </script>
+
 </body>
 
 </html>
