--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <meta property="og:title" content="Time Zone Display - UTC & Local Time" />
-  <meta property="og:description" content="Modern time display showing UTC and local time with animated icons" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@NAUTBOL" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Adsterra Popunder -->
+  <script>
+    if (location.hostname.includes("kuantyk.com")) {
+      const adsterraScript = document.createElement("script");
+      adsterraScript.src = "//pl27244104.profitableratecpm.com/dc/31/51/dc3151bdaf3cbf4216d408102940da86.js";
+      adsterraScript.type = "text/javascript";
+      document.head.appendChild(adsterraScript);
+    }
+  </script>
 </head>
 
 <body>
