--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     rel="stylesheet">
 
   <!-- Adsterra Popunder -->
-  <script>
+  <!-- <script>
     if (location.hostname.includes("kuantyk.com")) {
       const adsterraScript = document.createElement("script");
       adsterraScript.src = "//pl27244104.profitableratecpm.com/dc/31/51/dc3151bdaf3cbf4216d408102940da86.js";
       adsterraScript.type = "text/javascript";
       document.head.appendChild(adsterraScript);
     }
-  </script>
+  </script> -->
 </head>
 
 <body>
