--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
-
-  <!-- Adsterra Popunder -->
-  <!-- <script>
-    if (location.hostname.includes("kuantyk.com")) {
-      const adsterraScript = document.createElement("script");
-      adsterraScript.src = "//pl27244104.profitableratecpm.com/dc/31/51/dc3151bdaf3cbf4216d408102940da86.js";
-      adsterraScript.type = "text/javascript";
-      document.head.appendChild(adsterraScript);
-    }
-  </script> -->
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <!-- Adsterra -->
+  <script>
+    if (location.hostname.includes("kuantyk.com")) {
+      const adsterraScript = document.createElement("script");
+      adsterraScript.src = "//pl27193602.profitableratecpm.com/af/44/15/af441500bcb69f3126b4a9411f67eea9.js";
+      adsterraScript.type = "text/javascript";
+      document.head.appendChild(adsterraScript);
+    }
+  </script>
+
 </body>
 
 </html>
