--- a/index.html
+++ b/index.html
@@ -11,17 +11,45 @@
 
     gtag('config', 'G-4VBVQG5NYT');
   </script>
+
+  <title>Hora UTC Actual y Diferencia con Tu Hora Local - KUANTYK</title>
+  <meta name="description"
+    content="Consulta en tiempo real la hora UTC (Tiempo Universal Coordinado), tu hora local y la diferencia horaria entre ambas. Ideal para programadores, desarrolladores y profesionales globales." />
+  <meta name="keywords"
+    content="hora UTC, tiempo universal coordinado, diferencia horaria, hora actual, husos horarios, UTC ahora, UTC España, UTC México" />
+  <meta name="author" content="KUANTYK" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Time Zone Display - UTC & Local Time</title>
-  <meta name="description" content="Modern time display showing UTC and local time with animated icons" />
-  <meta name="author" content="NAUTBOL" />
+
+  <link rel="canonical" href="https://utc.kuantyk.com/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Hora UTC Actual y Diferencia con Tu Hora Local - KUANTYK" />
+  <meta property="og:description"
+    content="Consulta la hora UTC en tiempo real, tu hora local actual y conoce la diferencia horaria. Una herramienta simple y útil para sincronización global." />
+  <meta property="og:url" content="https://utc.kuantyk.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="KUANTYK UTC" />
+  <meta property="og:image" content="https://utc.kuantyk.com/og-image.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Hora UTC y Tu Hora Local en Tiempo Real - KUANTYK" />
+  <meta name="twitter:description"
+    content="Mira la hora UTC actual, tu hora local y la diferencia entre ambas. Herramienta precisa para quienes trabajan con diferentes zonas horarias." />
+  <meta name="twitter:image" content="https://utc.kuantyk.com/og-image.png" />
+  <meta name="twitter:site" content="@NAUTBOL" />
 
   <!-- Montserrat Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
