--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     gtag('config', 'G-4VBVQG5NYT');
   </script>
 
-  <title>Hora UTC Actual y Diferencia con Tu Hora Local - KUANTYK</title>
+  <title>Current UTC Time and Difference from Your Local Time - KUANTYK</title>
   <meta name="description"
-    content="Consulta en tiempo real la hora UTC (Tiempo Universal Coordinado), tu hora local y la diferencia horaria entre ambas. Ideal para programadores, desarrolladores y profesionales globales." />
+    content="Check the current UTC time (Coordinated Universal Time), your local time, and the time difference between them in real time. Ideal for developers, programmers, and global professionals." />
   <meta name="keywords"
-    content="hora UTC, tiempo universal coordinado, diferencia horaria, hora actual, husos horarios, UTC ahora, UTC España, UTC México" />
+    content="UTC time, coordinated universal time, time difference, current time, time zones, UTC now, UTC Spain, UTC Mexico" />
   <meta name="author" content="KUANTYK" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
@@ -24,9 +24,9 @@
   <link rel="canonical" href="https://utc.kuantyk.com/" />
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:title" content="Hora UTC Actual y Diferencia con Tu Hora Local - KUANTYK" />
+  <meta property="og:title" content="Current UTC Time and Local Time Difference - KUANTYK" />
   <meta property="og:description"
-    content="Consulta la hora UTC en tiempo real, tu hora local actual y conoce la diferencia horaria. Una herramienta simple y útil para sincronización global." />
+    content="See real-time UTC and local time with the difference between both. A simple and useful tool for global time synchronization." />
   <meta property="og:url" content="https://utc.kuantyk.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="KUANTYK UTC" />
@@ -34,9 +34,9 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Hora UTC y Tu Hora Local en Tiempo Real - KUANTYK" />
+  <meta name="twitter:title" content="Real-Time UTC and Local Time Difference - KUANTYK" />
   <meta name="twitter:description"
-    content="Mira la hora UTC actual, tu hora local y la diferencia entre ambas. Herramienta precisa para quienes trabajan con diferentes zonas horarias." />
+    content="View the current UTC time, your local time, and the difference between them. A precise tool for anyone working across time zones." />
   <meta name="twitter:image" content="https://utc.kuantyk.com/og-image.png" />
   <meta name="twitter:site" content="@NAUTBOL" />
 
