--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
   <script type="module" src="/src/main.tsx"></script>
 
   <!-- Adsterra -->
-  <script>
+  <!-- <script>
     if (location.hostname.includes("kuantyk.com")) {
       const adsterraScript = document.createElement("script");
       adsterraScript.src = "//pl27193602.profitableratecpm.com/af/44/15/af441500bcb69f3126b4a9411f67eea9.js";
       adsterraScript.type = "text/javascript";
       document.head.appendChild(adsterraScript);
     }
-  </script>
+  </script> -->
 
 </body>
 
