--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
-  <!-- Adsterra -->
-  <!-- <script>
-    if (location.hostname.includes("kuantyk.com")) {
-      const adsterraScript = document.createElement("script");
-      adsterraScript.src = "//pl27193602.profitableratecpm.com/af/44/15/af441500bcb69f3126b4a9411f67eea9.js";
-      adsterraScript.type = "text/javascript";
-      document.head.appendChild(adsterraScript);
+  <script>
+    if (window.location.hostname.includes("kuantyk.com")) {
+      const script = document.createElement("script");
+      script.src = "https://fpyf8.com/88/tag.min.js";
+      script.async = true;
+      script.setAttribute("data-zone", "160227");
+      script.setAttribute("data-cfasync", "false");
+      document.body.appendChild(script);
     }
-  </script> -->
+  </script>
 
 </body>
 
