--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://pl27193602.effectivegatecpm.com/af/44/15/af441500bcb69f3126b4a9411f67eea9.js"></script>
 </body>
 
 </html>
